<resources>
    <string name="app_name">AUTschedular</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="week_schedule">Week\'s Schedule</string>
    <string name="option">Option</string>
    <string name="logout">Logout</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_paper_description">PaperDescription</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_repeat">repeat</string>
    <string name="day">Sunday</string>
    <string name="title">No Title</string>
    <string name="time">Time</string>
    <string name="start_time">08:00</string>
    <string name="end_time">09:00</string>
    <string name="date">01-01-2016</string>
    <string name="reminder">0</string>
    <string name="day_title">Day :</string>
    <string name="title_title">Title :</string>
    <string name="time_title">Time :</string>
    <string name="reminder_title">Reminder :</string>
    <string name="start_time_title">Start Time :</string>
    <string name="end_time_title">End Time :</string>
    <string name="date_title">Date :</string>
    <string name="three_day_schedule">Three Day\'s schedule</string>
</resources>
