<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Repeat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.10"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.8"
            android:layout_marginTop="@dimen/app_bar_height">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/title_icon"
                    android:layout_width="@dimen/icon_edit_large"
                    android:layout_height="@dimen/icon_edit_large"
                    android:src="@drawable/ic_action_title"
                    android:tint="@color/colorBlack" />

                <LinearLayout
                    android:id="@+id/title_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/title_icon"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_title"
                        android:textSize="@dimen/font_edit_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="@dimen/font_edit_small" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/icon_edit_small"
                    android:layout_height="@dimen/icon_edit_small"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_action_pencil"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/day_icon"
                    android:layout_width="@dimen/icon_edit_large"
                    android:layout_height="@dimen/icon_edit_large"
                    android:src="@drawable/ic_action_calendar"
                    android:tint="@color/colorBlack" />

                <LinearLayout
                    android:id="@+id/day_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/day_icon"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_title"
                        android:textSize="@dimen/font_edit_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day"
                        android:textSize="@dimen/font_edit_small" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/icon_edit_small"
                    android:layout_height="@dimen/icon_edit_small"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_action_pencil"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="@dimen/icon_edit_large"
                    android:layout_height="@dimen/icon_edit_large"
                    android:src="@drawable/ic_action_clock"
                    android:tint="@color/colorBlack" />

                <LinearLayout
                    android:id="@+id/time_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_title"
                        android:textSize="@dimen/font_edit_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="@dimen/font_edit_small" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/icon_edit_small"
                    android:layout_height="@dimen/icon_edit_small"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_action_pencil"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/reminder_icon"
                    android:layout_width="@dimen/icon_edit_large"
                    android:layout_height="@dimen/icon_edit_large"
                    android:src="@drawable/ic_action_alarm"
                    android:tint="@color/colorBlack" />

                <LinearLayout
                    android:id="@+id/reminder_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/reminder_icon"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_title"
                        android:textSize="@dimen/font_edit_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder"
                        android:textSize="@dimen/font_edit_small" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/icon_edit_small"
                    android:layout_height="@dimen/icon_edit_small"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_action_pencil"
                    android:tint="@color/colorAccent" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.10"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
